Fixed global spacing of user-language and user-technology classes when there are a lot of them next to each other

--- a/src/DevHive.Angular/src/styles.css
+++ b/src/DevHive.Angular/src/styles.css
@@ -77,7 +77,8 @@ input:focus, button:focus {
   border-radius: .4em;
   background-color: lightgrey;
   padding: .26em;
-  margin: 0 .2em;
+  margin: .1em .2em;
+  width: fit-content;
 }
 
 /* Inputs, the type found in login and register */
